# Szkola-Labirynt

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: GameContext.hpp  GameState.hpp
include/states/: GameOverState.hpp  JumpscareState.hpp  LevelState.hpp  MenuState.hpp
include/utility/: BaseManager.hpp  CenterOrigin.hpp  Resources.hpp
source/: GameContext.cpp  GameState.cpp  main.cpp
source/states/: GameOverState.cpp  JumpscareState.cpp  LevelState.cpp  MenuState.cpp
